--- a/taxifare_prediction_model.ipynb
+++ b/taxifare_prediction_model.ipynb
@@ -17,7 +17,7 @@
         "id": "8sYlKgXPMqDt"
       },
       "source": [
-        "We will be training a Machine Learning model to predict which shoppers will become repeat buyers given information like transaction history of customers, incentive offered to each customer, and their response to the offer"
+        "We will be training a Machine Learning model to predict fare of a taxi ride based on information such as pickup and dropoff locations, number of passengers, etc."
       ]
     },
     {
