--- a/taxifare_prediction_model.ipynb
+++ b/taxifare_prediction_model.ipynb
@@ -26,7 +26,7 @@
         "id": "CX9DK6QOMqDu"
       },
       "source": [
-        "Dataset link: https://www.kaggle.com/competitions/acquire-valued-shoppers-challenge/data"
+        "This dataset is available for free on Kaggle"
       ]
     },
     {
